Upcoming version
=======================
+ Mirror support: TMM now distributed on several mirrors for better availability (and error handling for network blockages)
+ Movie renamer: complete rewrite - CHECK YOUR RENAMER SETTINGS!
+ Movie renamer: possible to "downgrade" a movie, when having no distinct folder. (CHECK YOUR FOLDER RENAMER SETTINGS!)
+ added sort option via sort title 
x renamer: exchange colon with a dash. (even better than removing completely)
x subtitles: language detection for SUB ones


Version 2.6.6
=======================
+ updated trakt.tv library to the new API
  IMPORTANT: please re-enter your login data for trakt.tv
  
+ new sort order for movies: video bit rate
+ bulk editing of media source for movies
+ added rating column to the movie table
+ double click in movie set/TV show tree opens the editor
+ added a message history window (menu tools - show message history)
+ added filter option for year (movie)
x reworked NFO naming. Now be able to add NFO inside DISC folders separately
x fixed the season template in the TV show renamer
x fixed renamer (movie & tv shows) for case insensitive file systems
x better rewriting of movie NFO after movie set editing
x HDRIP is now being recognized as BluRay (more common source than TV)
x change writing of .desktop files for linux
x fixed OSX app (now tinyMediaManager is launch able without Java 6)
x bad words are now checked case insensitive
x fixed search score calculation for tmdb/rottentomatoes scraper
x enhanced NFO parsing to be more tolerant
x fixed subtitle writing for Kodi NFOs
x improved loading of mediainfo on network shares
x fixed an UI glitch, where episodes disappeared after scraping
x performance fix for offline movie set artwork 
x fixed various smaller issues

Version 2.6.5
=======================
+ enhanced TV show and movie renamer (http://goo.gl/8pbkFj)
  IMPORTANT: REVIEW YOUR TV SHOW RENAMER SETTINGS!
  
+ DVD ordering of episodes (http://goo.gl/YBD5qJ)