@@ -906,7 +906,7 @@ public class TvShowUpdateDatasourceTask extends TmmThreadPool {
           if (vfilename.equals(FilenameUtils.getBaseName(mf.getFilename())) // basename match
               || Utils.cleanStackingMarkers(vfilename).trim().equals(FilenameUtils.getBaseName(mf.getFilename())) // basename w/o stacking
               || episode.getTitle().equals(FilenameUtils.getBaseName(mf.getFilename()))) { // title match
-            mf.setType(MediaFileType.POSTER);
+            mf.setType(MediaFileType.THUMB);
           }
         }
         episode.addToMediaFiles(mf);
