@@ -463,7 +463,8 @@ public class TvShowEpisodeEditorDialog extends TmmDialog implements ActionListen
       episodeToEdit.setWriter(tfWriter.getText());
       episodeToEdit.setActors(cast);
 
-      if (StringUtils.isNotEmpty(lblThumb.getImageUrl()) && !lblThumb.getImageUrl().equals(episodeToEdit.getThumbUrl())) {
+      if (StringUtils.isNotEmpty(lblThumb.getImageUrl())
+          && (!lblThumb.getImageUrl().equals(episodeToEdit.getThumbUrl()) || StringUtils.isBlank(episodeToEdit.getThumb()))) {
         episodeToEdit.setThumbUrl(lblThumb.getImageUrl());
         episodeToEdit.writeThumbImage();
       }
